Project Development Phase/Sprint 4/sprint4/kubernetes/ibm_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-expense-tracker

spec:
  replicas: 5
  selector:
    matchLabels:
      app: personal-expense-tracker
  template:
    metadata:
      labels:
        app: personal-expense-tracker

    spec:
      containers:
        - name: personal-expense-tracker
          image: jp.icr.io/petnamespace/personal-expense-tracker
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
