Project Development Phase/Sprint 4/sprint4/kubernetes/flask_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-expense-tracker-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    app: personal-expense-tracker
